# coral-fact-forensics-agent

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  coral-agent.toml  main.py  pyproject.toml  run_agent.sh
examples/local-studio/: README.md  registry.toml
examples/local-studio/agents/interface/: coral-agent.toml  pyproject.toml
tools/: __init__.py
typings/langchain_mcp_adapters/: client.pyi  prompts.pyi  resources.pyi  sessions.pyi  tools.pyi
